--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,11 +1,12 @@
-<div class="App">
-  <header class="App-header">
-    <img src="Octocat.png" class="App-logo" alt="logo" />
-    <p>
-      GitHub Codespaces <span class="heart">♥️</span> Rails
-    </p>
-    <p class="small">
-      Edit <code>app/views/hello/index.html.erb</code> and see changes live!
-    </p>
-  </header>
-</div>
+<a class="nes-btn" href="#">Normal</a>
+
+<button type="button" class="nes-btn is-primary">Primary</button>
+<button type="button" class="nes-btn is-success">Success</button>
+<button type="button" class="nes-btn is-warning">Warning</button>
+<button type="button" class="nes-btn is-error">Error</button>
+<button type="button" class="nes-btn is-disabled">Disabled</button>
+
+<label class="nes-btn">
+  <span>Select your file</span>
+  <input type="file">
+</label>
